Fixed up contact menu item

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     Document Title
     =============================================
     -->
-    <title>Titan | Multipurpose HTML5 Template</title>
+    <title>WACM | Western Associaton of Computing and Mathematics</title>
     <!--  
     Favicons
     =============================================
