--- a/constitution.html
+++ b/constitution.html
@@ -65,7 +65,7 @@
                   <li><a class="section-scroll" href="/index.html#about">About</a></li>
                   <li><a class="section-scroll" href="/index.html#events">Events</a></li>
                   <li><a href="https://www.facebook.com/WesternACM/">News</a></li>
-                  <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfhsB8DXrVgPAnR4zlCsu1joFPYf4H9FFlrl0yQWmTbjBzAFw/viewform?usp=sf_link">Contact</a></li>
+                  <li><a href="/contact.html">Contact</a></li>
                 </ul>
               </div>
 
