Changes to link to fix github link error

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
           <div class="collapse navbar-collapse" id="custom-collapse">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="#totop">Home</a></li>
-                  <li><a class="section-scroll" href="/about.html">About</a></li>
+                  <li><a class="section-scroll" href="/WesternACM/about.html">About</a></li>
                   <li><a class="section-scroll" href="#events">Events</a></li>
                   <li><a href="https://www.facebook.com/WesternACM/">News</a></li>
-                  <li><a href="/contact.html">Contact</a></li>
+                  <li><a href="/WesternACM/contact.html">Contact</a></li>
                 </ul>
           </div>
         </div>
