--- a/about.html
+++ b/about.html
@@ -13,17 +13,24 @@
     Favicons
     =============================================
     -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicons/android-chrome-192x192.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="assets/images/favicons/android-chrome-512x512.png">
-
-    <link rel="manifest" href="/assets/images/favicons/site.webmanifest">
-    
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/images/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/images/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/images/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/images/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/images/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/images/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/images/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/favicons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="assets/images/favicons/mstile-150x150.png">
+    <meta name="msapplication-TileImage" content="/assets/images/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
     
     <!--  
     Stylesheets
@@ -64,7 +71,7 @@
               <li><a class="section-scroll" href="/index.html#about">About</a></li>
               <li><a class="section-scroll" href="/index.html#events">Events</a></li>
               <li><a href="https://www.facebook.com/WesternACM/">News</a></li>
-              <li><a href="/contact.html">Contact</a></li>
+              <li><a href="/getinvolved.html">Get Involved</a></li>
             </ul>
           </div>
         </div>
@@ -74,16 +81,14 @@
       <div class="main">
         <section class="module bg-dark-60 about-page-header" data-background="assets/images/header.jpg">
           <div class="container">
-            <div class="row">
-              <div class="col-sm-6 col-sm-offset-3">
-                <h2 class="module-title font-alt">About</h2>
-                <div class="module-subtitle font-serif">The Western Association of Computing and Mathematics (WACM) is a newly established university club aimed to represent the computing, mathematics and data science students at Western Sydney University.</div>
-              </div>
-            </div>
+              <div class="titan-caption">
+                  <div class="caption-content">
+                    <div class="font-alt mb-30 titan-title-size-3">About</div>
+                    <div class="font-alt mb-40 titan-title-size-1">The Western Association of Computing and Mathematics (WACM) is a newly established university club aimed to represent the computing, mathematics and data science students at Western Sydney University.</div>
+                  </div>
+                </div>
           </div>
         </section>
-
-
 
         <section class="module pt-0 pb-0" id="about">
           <div class="row position-relative m-0">
