--- a/index.html
+++ b/index.html
@@ -14,16 +14,22 @@
     =============================================
     -->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicons/android-chrome-192x192.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="assets/images/favicons/android-chrome-512x512.png">
-
-    <link rel="manifest" href="/assets/images/favicons/site.webmanifest">
-    
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/images/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/images/favicons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/favicons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/images/favicons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/images/favicons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/images/favicons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/images/favicons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/favicons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/images/favicons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/images/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/favicons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="assets/images/favicons/mstile-150x150.png">
+    <meta name="msapplication-TileImage" content="/assets/images/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
     <!--  
@@ -62,10 +68,10 @@
           <div class="collapse navbar-collapse" id="custom-collapse">
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="#totop">Home</a></li>
-                  <li><a class="section-scroll" href="/WesternACM/about.html">About</a></li>
+                  <li><a class="section-scroll" href="/about.html">About</a></li>
                   <li><a class="section-scroll" href="#events">Events</a></li>
                   <li><a href="https://www.facebook.com/WesternACM/">News</a></li>
-                  <li><a href="/WesternACM/contact.html">Contact</a></li>
+                  <li><a href="/getinvolved.html">Get Involved</a></li>
                 </ul>
           </div>
         </div>
@@ -73,8 +79,8 @@
       <section class="home-section home-parallax home-fade home-full-height bg-dark-60 agency-page-header" id="home" data-background="assets/images/header.jpg">
         <div class="titan-caption">
           <div class="caption-content">
-            <div class="font-alt mb-30 titan-title-size-1">Western Association of</div>
-            <div class="font-alt mb-40 titan-title-size-3">Computing and Mathematics</div>
+            <div class="font-alt mb-30 titan-title-size-1">Western Sydney University - School of Computing, Data and Mathematical Sciences</div>
+            <div class="font-alt mb-40 titan-title-size-3">Western Association of Computing & Mathematics</div>
            
           </div>
         </div>
@@ -185,7 +191,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-6">
-                <p class="copyright font-alt">&copy; 2019&nbsp;Western ACM, theme by <a href="https://github.com/technext/Titan" target="_blank">TitaN</a></p>
+                <p class="copyright font-alt">&copy; 2019&nbsp;<img src="assets/images/logofooter.png" width=25px>&nbsp;Western ACM, theme by <a href="https://github.com/technext/Titan" target="_blank">TitaN</a></p>
               </div>
               <div class="col-sm-6">
                 <div class="footer-social-links">
