--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
       <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand" href="index.html">Titan</a>
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width=100px></a>
           </div>
           <div class="collapse navbar-collapse" id="custom-collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -249,7 +249,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-6">
-                <p class="copyright font-alt">&copy; 2019&nbsp;Western ACM, theme by <a href="https://github.com/technext/Titan" target="_blank">TitaN</a></p>
+                <p class="copyright font-alt">&copy; 2019&nbsp;<img src="assets/images/logofooter.png" width=25px>&nbsp;Western ACM, theme by <a href="https://github.com/technext/Titan" target="_blank">TitaN</a></p>
               </div>
               <div class="col-sm-6">
                 <div class="footer-social-links">
