--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <nav class="navbar navbar-custom navbar-fixed-top navbar-transparent" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width=70px></a>
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width=100px></a>
           </div>
           <div class="collapse navbar-collapse" id="custom-collapse">
               <ul class="nav navbar-nav navbar-right">
@@ -80,7 +80,8 @@
         <div class="titan-caption">
           <div class="caption-content">
             <div class="font-alt mb-30 titan-title-size-1">Western Sydney University - School of Computing, Data and Mathematical Sciences</div>
-            <div class="font-alt mb-40 titan-title-size-3">Western Association of Computing & Mathematics</div>
+            <div class="font-alt mb-40 titan-title-size-3">Western Association of</div>
+            <div class="font-alt mb-40 titan-title-size-3">Computing & Mathematics</div>
            
           </div>
         </div>
